[workspace]
members = ["juniper_rocket_multipart_handler"]

[package]
name = "lnapi"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
rocket = "0.5.0-rc.1"
juniper = "0.15.7"
juniper_rocket = "0.8.0"
diesel = { version = "1.4.7", features = ["postgres","r2d2","chrono","uuidv07"] }
dotenv = "0.15.0"
chrono = "0.4.19"
itconfig = { version = "1", features = ["macro"] }
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
lazy_static = "1.4.0"
derive_more = "0.99.16"
tonic_lnd = "0.3.0"
tonic = "0.6.2"
hex = "0.4.3"
serde = "1.0.136"
serde_json = "1.0.68"
lightning-invoice = "0.13.0"
diesel_migrations = "1.4.0"
rocket-multipart-form-data = "0.10.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
multer = "2.0.2"

[dependencies.tokio-util]
version = "0.7.1"

[dependencies.juniper_rocket_multipart_handler]
path = "./juniper_rocket_multipart_handler"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]

